sample-apps/about-page/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: about-cluster
spec:
  rules:
    - host: about.k8s-sample-gke.jchengdev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: about-cluster
                port:
                  number: 80
